# Prvni_kroky

./: CMakeLists.txt  Pole_Struktury.cpp  Promenne.cpp  Vetveni_Cykly.cpp  binaryTree.cpp  binaryTree.js  bubbleSort.cpp  main.cpp  mergeSort.cpp  quickSort.cpp  recursiveBinaryTree.js  selectionSort.cpp
SDL2/: main.cpp  main.h  sort.cpp
